fix toolbar being too wide

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,7 @@ header {
   font-size: 2em;
   text-align: center;
   font-family: Impact, sans-serif;
-  transform: scaleX(1.15);
   font-style: italic;
+  letter-spacing: 0.05em;
+  text-shadow: 1.5px 0 grey;
 }
